--- a/Missions_to_Mars/mission_to_mars.ipynb
+++ b/Missions_to_Mars/mission_to_mars.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,9 +18,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/bin/chromedriver\r\n"
+     ]
+    }
+   ],
    "source": [
     "#Locate chromedriver in local folder\n",
     "\n",
@@ -29,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,63 +73,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-------------\n",
+      "Title: NASA's Perseverance Rover Is Midway to Mars \n",
+      "Synopsis: Sometimes half measures can be a good thing – especially on a journey this long. The agency's latest rover only has about 146 million miles left to reach its destination.\n",
+      "-------------\n"
+     ]
+    }
+   ],
    "source": [
     "#Using find all function to identify latest title and text the print\n",
     "\n",
-    "news_title = soup.find_all('div', class_='content_title')[1].text\n",
+    "news_title = soup.find('li', class_ = \"slide\").find('div', class_='content_title').text\n",
     "\n",
-    "title_text = soup.find_all('div', class_='article_teaser_body')[0].text\n",
+    "title_text = soup.find('li', class_ = \"slide\").find('div', class_='article_teaser_body').text\n",
+    "\n",
     "\n",
     "print('-------------')\n",
     "print(f\"Title: {news_title}\")\n",
     "print(f\"Synopsis: {title_text}\")\n",
     "print('-------------')      \n",
-    "   "
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Scraping NASA JPL for featured Mars image\n",
     "\n",
     "jpl_url = 'https://www.jpl.nasa.gov/spaceimages/?search=&category=Mars'\n",
-    "browser.visit(jpl_url)\n"
+    "jplbase = 'https://www.jpl.nasa.gov'\n",
+    "browser.visit(jpl_url)\n",
+    "browser.is_element_present_by_id(\"images\", 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/assets/images/logo_nasa_trio_black@2x.png'"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Connect to website and find featured image url \n",
     "image_html = browser.html\n",
     "image_bs = bs(image_html, 'html.parser')\n",
-    "\n",
-    "featured_image_url = image_bs.find('article', class_='carousel_item')['style']\n",
+    "feature_image = image_bs.find(id=\"images\")\n",
+    "img_src = feature_image.find(\"img\")[\"src\"]\n",
+    "img_src"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'https://www.jpl.nasa.gov/assets/images/logo_nasa_trio_black@2x.png'"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "featured_image_url = jplbase + img_src\n",
     "featured_image_url"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "featured_images = re.findall(r\"'(.*?)'\",featured_image_url)\n",
-    "\n",
-    "featured_image_url = 'https://www.jpl.nasa.gov' + featured_images"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,9 +186,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'<table border=\"1\" class=\"dataframe\">  <thead>    <tr style=\"text-align: right;\">      <th></th>      <th>Parameters</th>    </tr>    <tr>      <th>Description</th>      <th></th>    </tr>  </thead>  <tbody>    <tr>      <th>Equatorial Diameter:</th>      <td>6,792 km</td>    </tr>    <tr>      <th>Polar Diameter:</th>      <td>6,752 km</td>    </tr>    <tr>      <th>Mass:</th>      <td>6.39 × 10^23 kg (0.11 Earths)</td>    </tr>    <tr>      <th>Moons:</th>      <td>2 (Phobos &amp; Deimos)</td>    </tr>    <tr>      <th>Orbit Distance:</th>      <td>227,943,824 km (1.38 AU)</td>    </tr>    <tr>      <th>Orbit Period:</th>      <td>687 days (1.9 years)</td>    </tr>    <tr>      <th>Surface Temperature:</th>      <td>-87 to -5 °C</td>    </tr>    <tr>      <th>First Record:</th>      <td>2nd millennium BC</td>    </tr>    <tr>      <th>Recorded By:</th>      <td>Egyptian astronomers</td>    </tr>  </tbody></table>'"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Connect to Space Facts website then convert findings to dataframe then again to html\n",
     "\n",
@@ -153,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,9 +230,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'Title': 'Cerberus Hemisphere ',\n",
+       "  'Image URl': '/cache/images/39d3266553462198bd2fbc4d18fbed17_cerberus_enhanced.tif_thumb.png'},\n",
+       " {'Title': 'Schiaparelli Hemisphere ',\n",
+       "  'Image URl': '/cache/images/08eac6e22c07fb1fe72223a79252de20_schiaparelli_enhanced.tif_thumb.png'},\n",
+       " {'Title': 'Syrtis Major Hemisphere ',\n",
+       "  'Image URl': '/cache/images/55a0a1e2796313fdeafb17c35925e8ac_syrtis_major_enhanced.tif_thumb.png'},\n",
+       " {'Title': 'Valles Marineris Hemisphere ',\n",
+       "  'Image URl': '/cache/images/4e59980c1c57f89c680c0e1ccabbeff1_valles_marineris_enhanced.tif_thumb.png'}]"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Locate hemisphere images then create dictionary to contain these images and their titles\n",
     "mars_hemisphere_html = browser.html\n",
@@ -186,12 +269,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
-    "conn = 'mongodb://localhost:27017'\n",
-    "client = pymongo.MongoClient(conn)"
+    "browser.back()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "browser.quit()"
    ]
   }
  ],
